deploy/stage/kubernetes/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: telegram-stickers
spec:
  selector:
    matchLabels:
      app: telegram-stickers
      tier: psql
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: telegram-stickers
        tier: psql
    spec:
      containers:
      - image: postgres:11.4-alpine
        name: psql
        ports:
        - containerPort: 5432
          name: psql
        volumeMounts:
        - name: database-persistent-storage
          mountPath: /var/lib/psql
      volumes:
      - name: database-persistent-storage
        persistentVolumeClaim:
          claimName: database-pv-claim
