deploy/stage/kubernetes/telegram-stickers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram-stickers-deployment
  labels:
    app: telegram-stickers
spec:
  replicas: 3
  selector:
    matchLabels:
      app: telegram-stickers
      tier: backend
  template:
    metadata:
      labels:
        app: telegram-stickers
        tier: backend
    spec:
      containers:
      - image: fnsdev/telegram-stickers-stage:latest
        name: telegram-stickers
        ports:
        - containerPort: 80
          name: tg-stickers
