deploy/stage/kubernetes/telegram-stickers-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegram-stickers-service
  labels:
    app: telegram-stickers
  annotations:
    metallb.universe.tf/allow-shared-ip: telegram-stickers
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: telegram-stickers
    tier: backend
  type: LoadBalancer
